--- a/blinds.html
+++ b/blinds.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
 
     
 
@@ -84,11 +84,11 @@
     <div class="container">
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
-                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-5">
+                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
                      <p>Have your blinds respond when the air conditioning activates or when the alarm is armed close the blinds automatically when you are not at home.</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Open up a world of possibilities with motorised roller blinds. It will add ease, convenience and comfort, while saving money on your energy bills. Many customers want to upgrade their existing blinds without having to replace them and our 240 volt or battery solutions cater to that requirement.</p>
+                     <p>Open up a world of possibilities with motorised roller blinds. It will add ease, convenience and comfort, while saving money on your energy bills. </p><p>Many customers want to upgrade their existing blinds without having to replace them and our 240 volt or battery solutions cater to that requirement.</p>
                 </div>
                 
             </div>
