--- a/cameras.html
+++ b/cameras.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header1 cid-ssrYZA9je2" id="header16-46">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="header1 cid-ssrYZA9je2" id="header16-46">
 
     
 
