--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
 
     
 
@@ -97,7 +97,7 @@
                     <br>Our team blends skillsets from electrical engineering to IT architecture and we are continually learning from our experiences in delivering this exciting platform to market.&nbsp;<br><br>We welcome any feedback or suggestions.. and of course your questions.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=place_id:ChIJ33Uj5shp1moRsrA43lAfkAA" allowfullscreen=""></iframe></div>
             </div>
         </div>
         
