--- a/power.html
+++ b/power.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
 
     
 
@@ -83,11 +83,11 @@
     <div class="container">
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
-                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-5">
-                     <p>Smart power points are very affordable, can monitor your electricity usage, and in many cases save you money.</p>
+                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
+                     <p>Smart power points are very affordable, can monitor your electricity usage, and in many cases save you money.</p><p>Whether it be a coffee machine, a lamp, an electric blanket or a pump... take control of the outlet at the outlet.</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Whether it be a coffee machine, a lamp, an electric blanket or a pump... take control of the outlet at the outlet.</p><p>Smart power points that allow you to control the power point manually but also harness the ability to control them via HomeKit, or have them participate in automations.</p>
+                     <p><span style="font-size: 1rem;">Smart power points that allow you to control the power point manually but also harness the ability to control them via HomeKit, or have them participate in automations.</span><br></p>
                 </div>
                 
             </div>
