--- a/thermostat2.html
+++ b/thermostat2.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
@@ -83,12 +83,12 @@
     <div class="container">
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
-                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-5">
-                     <p>These handy devices can help you save energy—which is good for both the environment and for your wallet. Like other smart home features, they connect to your home Wi-Fi network and are controlled by an associated app (and HomeKit) on your iPhone, iWatch, iPad.
+                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
+                     <p>These handy devices can help you save energy—which is good for both the environment and for your wallet. Like other smart home features, they connect to your home Wi-Fi network and are controlled by an associated app (and HomeKit) on your iPhone, iWatch, iPad.</p><p>These thermostats learn your climate preferences—such as if you like it warmer in the morning—and even what times of day you’re home and away.&nbsp;</p><p>
 </p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">These thermostats learn your climate preferences—such as if you like it warmer in the morning—and even what times of day you’re home and away. The result is that they can work proactively to keep your home at the most comfortable temperature for you without you having to lift a finger. And they do it all with a high degree of efficiency, reducing energy consumption by 30% or more in some cases.&nbsp;</span><br><span style="font-size: 1rem;"></span></p><p>
+                     <p><span style="font-size: 1rem;">The result is that they can work proactively to keep your home at the most comfortable temperature for you without you having to lift a finger. And they do it all with a high degree of efficiency, reducing energy consumption by 30% or more in some cases.&nbsp;</span><br><span style="font-size: 1rem;"></span></p><p>
 <span style="font-size: 1rem;">Smart thermostats can send you an alert if the temperature in your home becomes excessively high or low.  Top smart thermostats include the Nest Learning Thermostat and the ecobee Smart Thermostat.  They can connect to Brivis, Braemar, Rinnai, Mitsubishi, Bonaire, Daikin and many more.</span></p>
                 </div>
                 
