--- a/irrigation.html
+++ b/irrigation.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-spYRjfkErh" id="header16-2n">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header1 cid-spYRjfkErh" id="header16-2n">
 
     
 
@@ -83,7 +83,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
-                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-5">
+                <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
                      <p>Have your irrigation automatically adjust every day based on localised weather information (rainfall, temperature, wind and evaporation).&nbsp;</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
