--- a/pricing.html
+++ b/pricing.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-spTGLodGph" id="content5-1p">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-spTGLodGph" id="content5-1p">
 
     
 
