--- a/lighting.html
+++ b/lighting.html
@@ -50,13 +50,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="false">Main Menu</a>                   <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a> <a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a><a class="dropdown-item text-white display-4" href="cbus.html" aria-expanded="false">CBUS</a><a class="dropdown-item text-white display-4" href="faq.html" aria-expanded="false">FAQ</a><a class="dropdown-item text-white display-4" href="contact.html" aria-expanded="false">Contact</a> </div></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="false">Main Menu</a>                     <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a>  <a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a> <a class="dropdown-item text-white display-4" href="sensors.html" aria-expanded="false">Network Sensors</a><a class="dropdown-item text-white display-4" href="cbus.html" aria-expanded="false">CBUS</a><a class="dropdown-item text-white display-4" href="faq.html" aria-expanded="false">FAQ</a><a class="dropdown-item text-white display-4" href="contact.html" aria-expanded="false">Contact</a> </div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
+<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
 
     
 
@@ -202,7 +202,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
