--- a/sensors.html
+++ b/sensors.html
@@ -50,13 +50,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="false">Main Menu</a>                     <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a>  <a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a> <a class="dropdown-item text-white display-4" href="sensors.html" aria-expanded="false">Network Sensors</a><a class="dropdown-item text-white display-4" href="cbus.html" aria-expanded="false">CBUS</a><a class="dropdown-item text-white display-4" href="faq.html" aria-expanded="false">FAQ</a><a class="dropdown-item text-white display-4" href="contact.html" aria-expanded="false">Contact</a> </div></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="true">Main Menu</a>                     <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a>  <a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a> <a class="dropdown-item text-white display-4" href="sensors.html" aria-expanded="false">Network Sensors</a><a class="dropdown-item text-white display-4" href="cbus.html" aria-expanded="false">CBUS</a><a class="dropdown-item text-white display-4" href="faq.html" aria-expanded="false">FAQ</a><a class="dropdown-item text-white display-4" href="contact.html" aria-expanded="false">Contact</a> </div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-sF0xnFJcca" id="header16-56">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-sF0xnFJcca" id="header16-56">
 
     
 
@@ -83,7 +83,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p><span style="font-size: 1rem;">A typical home has plenty of devices connected to the internet, some hard wired others wireless.</span></p><p><span style="font-size: 1rem;">There are many reasons why a network might misbehave, so wouldnt it be handy to know when devices are connected or not without having to log onto the router or call an I.T guy?</span></p><p><br></p>
+                     <p><span style="font-size: 1rem;">A typical home has plenty of devices connected to the internet, some hard wired others wireless.</span></p><p><span style="font-size: 1rem;">There are many reasons why a network might misbehave, so wouldnt it be handy to know when devices are connected or not without having to log onto the router or call an I.T professional?</span></p><p><br></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p>Whether it be a networked printer, a particular phone or watch, a Chromecast or a laptop... anything device that you wish to know whether it is connected to your Wifi or not.</p><p>We simply monitor its status and report to you via HomeKit when the sensor has been triggered.</p>
