--- a/thermostat.html
+++ b/thermostat.html
@@ -50,13 +50,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="true">Main Menu</a>                     <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a>  <a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a> <a class="dropdown-item text-white display-4" href="sensors.html" aria-expanded="false">Network Sensors</a><a class="dropdown-item text-white display-4" href="cbus.html" aria-expanded="false">CBUS</a><a class="dropdown-item text-white display-4" href="faq.html" aria-expanded="false">FAQ</a><a class="dropdown-item text-white display-4" href="contact.html" aria-expanded="false">Contact</a> </div></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="true">Main Menu</a>                     <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a>  <a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security</a> <a class="dropdown-item text-white display-4" href="sensors.html" aria-expanded="false">Network Sensors</a><a class="dropdown-item text-white display-4" href="cbus.html" aria-expanded="false">CBUS</a><a class="dropdown-item text-white display-4" href="faq.html" aria-expanded="false">FAQ</a><a class="dropdown-item text-white display-4" href="contact.html" aria-expanded="false">Contact</a> </div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
@@ -112,7 +112,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Smart thermostats</h4>
                         <p class="mbr-text mbr-fonts-style display-7">There are many different types of smart thermostats.
-<br><br>The Nest thermostat is our most popular seller (due to its sleek appearance.. but it's also the most expensive. Alternatives are a plenty and pricing varies between $180 - $350 each.</p>
+<br><br>The Nest thermostat is our most popular seller (due to its sleek appearance.. but it's also the most expensive. Alternatives are a plenty and pricing start from $180 unfitted.</p>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Mobile Friendly
                         </h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Most major brands can be retro fitted with either a smart thermostat or wifi controller.<br><br>Wifi modules from the manufacturer can be purchased and installed between $350-$450.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Most major brands can be retro fitted with either a smart thermostat or wifi controller.<br><br>Wifi modules from the manufacturer can be purchased and installed. &nbsp;Depending upon brand these can vary in cost from $350 up to $1100.</p>
                     </div>
                 </div>
             </div>
@@ -204,7 +204,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
