--- a/cameras.html
+++ b/cameras.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Control your security system cameras with House-mate">
   
   
-  <title>House-mate | Cameras</title>
+  <title>House-mate | Cameras and Doorbells</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="header1 cid-ssrYZA9je2" id="header16-46">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="header1 cid-ssrYZA9je2" id="header16-46">
 
     
 
