--- a/blinds.html
+++ b/blinds.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
 
     
 
@@ -136,7 +136,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Smarten your venetians or curtains</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Ever wanted those old venetian's to open and close automatically?
-<br>Now it's possible with small motors (or switches if you already have motors) that fit into the head rail and control the tilt rod. Hard wired or battery available</p>
+Now it's possible with small motors (or switches if you already have motors) that fit into the head rail and control the tilt rod. Hard wired or battery available</p>
                     </div>
                 </div>
             </div>
