--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
 
     
 
@@ -128,7 +128,7 @@
                                     E-mail:
                                 </h5>
                                 <p class="mbr-text align-left mbr-fonts-style display-7">
-                                    info@house-mate.com.au<br></p>
+                                    <a href="mailto:info@house-mate.com.au">info@house-mate.com.au</a><br></p>
                             </div>
                         </div>
                     </div>
