--- a/irrigation.html
+++ b/irrigation.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="header1 cid-spYRjfkErh" id="header16-2n">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header1 cid-spYRjfkErh" id="header16-2n">
 
     
 
@@ -86,7 +86,7 @@
                      <p>Have your irrigation automatically adjust every day based on localised weather information (rainfall, temperature, wind and evaporation).&nbsp;</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Smart irrigation systems can cut down water usage by up to 50% compared to conventional systems. &nbsp;Only water when and where it’s needed. Now that's smart and saves you money too!</p><p>Cycle any zone(s) at the touch of a button or voice command. "Hey Siri, water the front lawn".</p>
+                     <p>Smart irrigation systems can cut down water usage by up to 50% compared to conventional systems. &nbsp;Only water when and where it’s needed. <span style="font-size: 1rem;">Cycle any zone(s) at the touch of a button or voice command. "Hey Siri, water the front lawn".</span></p>
                 </div>
                 
             </div>
@@ -116,7 +116,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/asd-667x500.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/asd-667x500.jpeg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
