--- a/lighting.html
+++ b/lighting.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
 
     
 
@@ -121,9 +121,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Keep your switches&nbsp;</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Many solutions require new switches or wall plates, and that can become expensive.
-<br>
-<br>Our solution can utilise your existing switches.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Many solutions require new switches or wall plates, and that can become expensive. Our solution can utilise your existing switches.</p>
                     </div>
                 </div>
             </div>
