--- a/power.html
+++ b/power.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
 
     
 
@@ -148,7 +148,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             HomeKit control</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Using the rich application designed and supported by Apple, control any smart power point in your home, or have it participate in automations.
+                            Using HomeKit, control any smart power point in your home, or have it participate in automations.
                         </p>
                     </div>
                 </div>
