--- a/security.html
+++ b/security.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header1 cid-spZo94Lxj9" id="header16-2t">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header1 cid-spZo94Lxj9" id="header16-2t">
 
     
 
@@ -83,10 +83,10 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>Have your alarm activate automatically when the last person leaves the house and deactivate when the first person arrives home.</p><p>Setup automations to occur when the alarm is armed , eg: turn off lights, TVs, close blinds.</p>
+                     <p>Have your alarm activate automatically when the last person leaves the house and deactivate when the first person arrives home.&nbsp;<span style="font-size: 1rem;">Setup automations to occur when the alarm is armed , eg: turn off lights, TVs, close blinds.</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">Integrate smoke detectors, movement sensors, cameras, door/window sensors.  All can send notifications if triggered when the house is armed.</span></p><p><span style="font-size: 1rem;">Keyless entry compatibility. Numerous locks available to suit different designs.</span></p>
+                     <p><span style="font-size: 1rem;">Integrate smoke detectors, movement sensors, cameras, door/window sensors.  All can send notifications if triggered when the house is armed.&nbsp;</span><span style="font-size: 1rem;">Keyless entry compatibility. Numerous locks available to suit different designs.</span></p>
                 </div>
                 
             </div>
