--- a/thermostat.html
+++ b/thermostat.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
@@ -83,11 +83,11 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>Smart thermostats connect to your Wi-Fi network and can be controlled either via the manufacturers app and also integrated into HomeKit, delivering control to your iPhone, iWatch, iPad.</p><p>These thermostats learn your climate preferences—such as if you like it warmer in the morning—and can respond as part of a Scene, Eg: turn the heating off when nobody is home. &nbsp;</p><p>
+                     <p>Smart thermostats connect to your Wi-Fi network and can be controlled either via the manufacturers app and also integrated into HomeKit, delivering control to your iPhone, iWatch, iPad.&nbsp;<span style="font-size: 1rem;">These thermostats can respond as part of an automation, Eg: turn the heating off when nobody is home. &nbsp;</span></p><p>
 </p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">The result is that they can work proactively to keep your home at the most comfortable temperature for you without you having to lift a finger. And they do it all with a high degree of efficiency, reducing energy consumption by 30% or more in some cases.&nbsp;</span><br><span style="font-size: 1rem;"></span></p><p><br></p>
+                     <p><span style="font-size: 1rem;">The result is that they can work proactively to keep your home at the most comfortable temperature for you without you having to lift a finger. And they do it all with a high degree of efficiency, reducing energy consumption by 30% or more in some cases.&nbsp;</span></p>
                 </div>
                 
             </div>
@@ -122,7 +122,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Smart thermostats</h4>
                         <p class="mbr-text mbr-fonts-style display-7">There are many different types of smart thermostats.
-<br><br>The Nest thermostat is popular (due to its sleek appearance.. but it's also the most expensive at $350 unfitted). Alternatives start from $180.</p>
+The Nest thermostat is popular (due to its sleek appearance.. but it's also the most expensive at $350 unfitted). Alternatives start from $180.</p>
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Mobile Friendly
                         </h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Most major brands can be retro fitted with either a smart thermostat or wifi controller.<br><br>Wifi modules from the manufacturer can be purchased and installed by heating/cooling specialists. &nbsp;Depending upon brand these can vary in cost from $350 up to ~$1100.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Most major brands can be retro fitted with either a smart thermostat or wifi controller. Wifi modules from the manufacturer can be purchased and installed by heating/cooling specialists. &nbsp;Depending upon brand these can vary in cost from $350 up to ~$1100.</p>
                     </div>
                 </div>
             </div>
@@ -151,8 +151,7 @@
                             Unique Styles
                         </h4>
                         <p class="mbr-text mbr-fonts-style display-7">HomeKit renders the thermostat &nbsp;to look like a stylish dial that can be controlled by your finger, or alternatively by voice.
-<br>
-<br>"Hey Siri, set thermostat to 30 degrees"</p>
+"Hey Siri, set thermostat to 30 degrees"</p>
                     </div>
                 </div>
             </div>
