--- a/garage.html
+++ b/garage.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="header1 cid-sIRo2GqqdF" id="header16-5u">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="header1 cid-sIRo2GqqdF" id="header16-5u">
 
     
 
@@ -83,7 +83,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>Have your garage door control in the palm of your hand. Instruct Siri to open or close the garage door as you approach in your car. Ditch the old remote control.</p>
+                     <p>Have your garage door control in the palm of your hand. Instruct Siri to open or close the garage door as you approach in your car. Ditch the old remote control for good.</p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6"><p>Place a camera in the garage and be able to securely accept deliveries. &nbsp;Integrates seamlessly into HomeKit and provides visual status of the garage door to ensure it isnt open when you dont want it to be. &nbsp;&nbsp;</p></div>
                 
