--- a/thermostat.html
+++ b/thermostat.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
