--- a/remote.html
+++ b/remote.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-sIMTM9Ac6q" id="header16-5n">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-sIMTM9Ac6q" id="header16-5n">
 
     
 
@@ -83,7 +83,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>The number of remote controls can quickly add up when you count TVs, Amplifiers, Foxtel, AppleTV, Projectors, etc etc. &nbsp;<span style="font-size: 1rem;">Capture selected buttons from your remote controls and operate them directly from your phone.</span></p>
+                     <p>The number of remote controls can quickly add up when you count TVs, Amplifiers, Foxtel, AppleTV, Projectors, etc etc. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <span style="font-size: 1rem;">Capture selected buttons from your remote controls and operate them directly from your phone.</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p>Record the buttons being pressed in any sequence for any duration. For example: turn on the TV, select a particular input, turn on the amplifier, and then turn the Foxtel on - all initiated from the press of a single button on your phone, or by voice.</p>
