--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-swkPXUJ8Zs" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="mbr-section content5 cid-swkPXUJ8Zs" id="content5-4v">
 
     
 
@@ -104,7 +104,7 @@ The installation duration is dependent on the scope of the job.  The first phase
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
