--- a/blinds.html
+++ b/blinds.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
 
     
 
@@ -100,7 +100,7 @@
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 80%;">
-            <div><iframe class="mbr-embedded-video" src="https://house-mate.com.au/assets/images/blinds.mp4?loop=0&amp;autoplay=1" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/0vF_3RrAR3E?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
